# Bangla-Noisy-Event-Eval

./: .gitignore  README.md  pyproject.toml  requirements.txt
Codes/: Instruction Tuning LLMs with LoRA.ipynb  Synthetic Typing Noise Generator.ipynb
Dataset/: asr_annotations.jsonl  news_annotations.jsonl  schema.md
Dataset/splits/asr/: test.jsonl  train.jsonl  val.jsonl
Dataset/splits/clean/: test.jsonl  train.jsonl  val.jsonl
Dataset/splits/combined/: train.jsonl  val.jsonl
Dataset/splits/noise/: test_wcr10.jsonl  test_wcr20.jsonl  test_wcr30.jsonl  test_wcr40.jsonl
Dataset/splits/sft/: val_basic.jsonl
noise_generator/: Synthetic Typing Noise Generator.ipynb
plots/: gen_macro_f1_decomposed.py  plot_significance_heatmap.py  plot_wcr_vs_macro_f1.py
plots/data/: ASR_Test_Results.csv  Clean_Test_Results.csv  WCR_Test_Results.csv
sample data/: asr_test_prompts_final.jsonl  hf_event_asr_dataset_final.json  hf_event_news_dataset_final.json
sample data/splits/: sft_train_final.jsonl  sft_val_final.jsonl
sample data/splits/asr_splits/: asr_test_vault.jsonl
sample data/splits/clean_splits/: clean_test.jsonl
sample_data/: output_merged_asr_final.json  output_merged_news_final.json  schema_final_v2.md
sample_data/splits/asr_splits/: asr_train_oracle.jsonl  asr_val.jsonl
scripts/: combine_splits.py  eval_decoder.py  eval_encoder.py  generate_noise.py  mcnemar_test.py  prepare_data.py  train_decoder.py  train_encoder.py
src/: data.py  metrics.py  models.py  noise.py
training/: BERT_based_model_training.ipynb
(+4 files in other folders)
