[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bangla-event-robustness"
version = "1.0.0"
description = "Evaluating encoder vs decoder robustness for Bangla event detection under noisy conditions"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
